--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 markdown: rdiscount
 permalink: /:year/:month/:title/
-url: http://geeklu.com
+url: http://codinghard.github.io/
 author: codinghard
 pygments: true
 paginate: 24
